--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
-    "gulp-less": "^3.5.0",
+    "gulp-less": "^4.0.0"
   },
   "dependencies": {
     "save-file": "^2.3.1"
